# internal/notification/response.go
@@ -1,0 +1,6 @@
+package notification
+
+type NotificationResponse struct {
+	ID     int64  `json:"id"`
+	Status string `json:"status"`
+}
